# enpm702_fall2024_ros

./: .gitignore  LICENSE  README.md
final_class/final_world/: CMakeLists.txt  package.xml
final_class/final_world/config/: rviz_in_class.rviz
final_class/final_world/final_world/: environment_startup.py  spawn_params.py  tf_broadcaster.py
final_class/final_world/include/final_world/: target_publisher_node.hpp
final_class/final_world/launch/: final.launch.py  final_world.launch.py
final_class/final_world/nodes/: box_broadcaster.py  environment_startup_node.py  part_spawner.py  rviz_display.py  sensor_tf_broadcaster.py
final_class/final_world/src/: ariac_logical_camera_plugin.cpp  disable_shadows_plugin.cpp  reach_target_client.cpp  target_publisher_node.cpp
final_class/final_world/worlds/: final.world
final_class/mage_msgs/: CMakeLists.txt
final_class/mage_msgs/msg/: Parts.msg
final_home/final_project/: package.xml
final_home/final_project/config/: sensors.yaml  waypoint_params.yaml
final_home/final_project/launch/: final_project.launch.py
final_home/final_project/models/regulator/: model.sdf
final_home/final_project/nodes/: part_spawner.py
final_home/final_project/worlds/: final_summer_702.world
final_home/part_publisher/: CMakeLists.txt  package.xml
final_home/part_publisher/include/part_publisher/: part_publisher_node.hpp
final_home/part_publisher/src/: main.cpp  part_publisher_node.cpp
lecture10/first_package/: CMakeLists.txt  package.xml
lecture10/first_package/include/first_package/: first_node.hpp
lecture10/first_package/src/: first_node.cpp  main.cpp
lecture11/bot_publisher/: CMakeLists.txt  package.xml
lecture11/bot_publisher/include/bot_publisher/: bot_publisher.hpp
lecture11/bot_publisher/src/: main.cpp
lecture11/bot_subscriber/: CMakeLists.txt  package.xml
lecture11/bot_subscriber/include/bot_subscriber/: bot_subscriber.hpp
lecture11/bot_subscriber/src/: bot_subscriber.cpp  main.cpp
lecture12/enpm702_msgs/: CMakeLists.txt  package.xml
lecture12/enpm702_msgs/msg/: BotStatus.msg
lecture12/interface_demo/: CMakeLists.txt  package.xml
lecture12/interface_demo/include/interface_demo/: interface_demo_node.hpp
lecture12/interface_demo/src/: interface_demo_node.cpp  main.cpp
lecture12/multithreadedexecutor_demo/: CMakeLists.txt  package.xml
lecture12/multithreadedexecutor_demo/include/multithreadedexecutor_demo/: multithreadedexecutor_demo_node.hpp
lecture12/multithreadedexecutor_demo/src/: color_utils.cpp  main.cpp  multithreadedexecutor_demo_node.cpp
lecture12/p_controller_demo/: CMakeLists.txt  package.xml
lecture12/p_controller_demo/include/p_controller_demo/: p_controller_demo_node.hpp
lecture12/p_controller_demo/src/: main.cpp  p_controller_demo_node.cpp
lecture12/qos_demo_publisher/: CMakeLists.txt  package.xml
lecture12/qos_demo_publisher/include/qos_demo_publisher/: qos_demo_publisher_node.hpp
lecture12/qos_demo_publisher/src/: main.cpp  qos_demo_publisher_node.cpp
lecture12/qos_demo_subscriber/: CMakeLists.txt  package.xml
lecture12/qos_demo_subscriber/include/qos_demo_subscriber/: qos_demo_subscriber_node.hpp
lecture12/qos_demo_subscriber/src/: main.cpp  qos_demo_subscriber_node.cpp
lecture12/qos_publisher_demo/: CMakeLists.txt  package.xml
lecture12/qos_publisher_demo/include/qos_publisher_demo/: color_utils.hpp  qos_publisher_demo_node.hpp
lecture12/qos_publisher_demo/src/: main.cpp  qos_publisher_demo_node.cpp
lecture12/qos_subscriber_demo/: CMakeLists.txt  package.xml
lecture12/qos_subscriber_demo/include/qos_subscriber_demo/: qos_subscriber_demo_node.hpp
lecture12/qos_subscriber_demo/src/: main.cpp  qos_subscriber_demo_node.cpp
lecture12/quaternion_demo/: CMakeLists.txt  package.xml
lecture12/quaternion_demo/include/lecture4/: quaternion_example.hpp
lecture12/quaternion_demo/include/quaternion_demo/: quaternion_example.hpp
lecture12/quaternion_demo/src/: main.cpp  quaternion_example.cpp
lecture12/singlethreadedexecutor_demo/: CMakeLists.txt  package.xml
lecture12/singlethreadedexecutor_demo/include/singlethreadedexecutor_demo/: singlethreadedexecutor_demo_node.hpp
lecture12/singlethreadedexecutor_demo/src/: main.cpp  singlethreadedexecutor_demo_node.cpp
lecture13/final_project/: CMakeLists.txt  package.xml
lecture13/final_project/include/final_project/: reach_target_action.hpp
lecture13/final_project/launch/: final_project.launch.py
lecture13/final_project/models/pump/: model.sdf
lecture13/final_project/nodes/: robot_target_interface.py
lecture13/final_project/worlds/: final_summer_702.world
lecture13/frames_demo/: CMakeLists.txt  package.xml
lecture13/frames_demo/include/frames_demo/: broadcaster_demo.hpp
lecture13/frames_demo/src/: broadcaster_demo.cpp  listener_demo.cpp
lecture13/launch_file_demo/: CMakeLists.txt  package.xml
lecture13/launch_file_demo/launch/: demo1.launch.py  demo2.launch.py  demo3.launch.py  demo4.launch.py
lecture13/mage_msgs/: CMakeLists.txt
lecture13/mage_msgs/msg/: NewCoordinates.msg
lecture13/sensor_demo/: CMakeLists.txt  package.xml
lecture13/sensor_demo/include/sensor_demo/: camera_node.hpp  lidar_node.hpp  processing_node.hpp  temperature_node.hpp
lecture13/sensor_demo/launch/: demo5.launch.py  demo6.launch.py  demo7.launch.py  demo8.launch.py
lecture13/sensor_demo/src/: camera_node.cpp  lidar_node.cpp  processing_node.cpp  temperature_node.cpp
